View 추가 - font-awesome, jdenticon : 라이브러리 사용

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,9 @@
 <body class="bg-light">
 
 <div th:replace="fragements.html :: main-nav"></div>
-
+<div class="alert alert-warning" role="alert" th:if="${account != null && !account?.emailVerified}">
+    스터디올레 가입을 완료하려면 <a href="#" th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
+</div>
 <div class="container">
     <div class="py-5 text-center">
         <h2>HobbyTogether</h2>
@@ -14,8 +16,6 @@
 
     <div th:replace="fragements.html :: footer"></div>
 </div>
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script type="application/javascript">
     (function () {
 
