--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -5,7 +5,14 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>HobbyTogether</title>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <!--font-awesome 추가-->
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+    <!-- 자바 스크립트는 꼭 닫아줘야 -->
+    <!--jdenticon 추가-->
+    <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .container {
             max-width: 100%;
@@ -41,23 +48,28 @@
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="#" th:href="@{/notification}">
-                    알림</a>
+                    <!--font-awesome 벨 추가-->
+                    <i class="fa fa-bell-o" aria-hidden="true"></i>
+                </a>
             </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
+            <li class="nv-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link btn btn-outline-primary" href="#" th:href="@{/notification}">
-                    취미공유 모임 개설 </a>
+                    <!--font-awesome 더하기 추가-->
+                    <i class="fa fa-plus" aria-hidden="true"> </i> 취미공유 모임 개설 </a>
             </li>
             <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
-                    프로필
+                    <!-- jdenticon 이름에 따라 다른 아바타가 나옴 -->
+                    <svg data-jdenticon-value="user127" th:data-jdenticon-value="${#authentication.name}"
+                         width="24" height="24" class="rounded border bg-right"></svg>
                 </a>
                 <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
                     <h6 class="dropdown-header">
                         <span sec:authentication="name">Username</span>
                     </h6>
                     <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">프로필</a>
-                    <a class="dropdown-item" >스터디</a>
+                    <a class="dropdown-item">스터디</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
                     <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
