--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 
 <div th:replace="fragements.html :: main-nav"></div>
 <div class="alert alert-warning" role="alert" th:if="${account != null && !account?.emailVerified}">
-    스터디올레 가입을 완료하려면 <a href="#" th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
+    하비투게더 가입을 완료하려면 <a href="#" th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
 </div>
 <div class="container">
     <div class="py-5 text-center">
