--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragements.html :: head"></head>
 <body class="bg-light">
 
@@ -16,10 +15,5 @@
 
     <div th:replace="fragements.html :: footer"></div>
 </div>
-<script type="application/javascript">
-    (function () {
-
-    }())
-</script>
 </body>
 </html>
