--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -11,7 +11,7 @@
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
 <!--        <div th:replace="fragements.html :: settings-menu(currnetMenu='profile')"></div>-->
-            <div th:fragment="settings-menu (currentMenu)" class="list-group">
+            <div class="list-group">
                 <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">프로필</a>
                 <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">패스워드</a>
                 <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active" href="#" th:href="@{/settings/notifications}">알림</a>
