Tag domain / add Tag / view

--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -6,16 +6,19 @@
     <meta charset="UTF-8">
     <title>HobbyTogether</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <!--font-awesome 추가-->
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
-    <!-- 자바 스크립트는 꼭 닫아줘야 -->
-    <!--jdenticon 추가-->
+    <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
     <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .container {
             max-width: 100%;
+        }
+        .tagify-outside{
+            border: 0;
+            padding: 0;
+            margin: 0;
         }
     </style>
 </head>
