--- a/src/main/resources/templates/settings/tags.html
+++ b/src/main/resources/templates/settings/tags.html
@@ -33,7 +33,10 @@
                         참여하고 싶은 취미 주제를 입력해 주세요. 해당 주제의 취미가 생기면 알림을 받을 수 있습니다. 태그를 입력하고 콤마(,)
                         또는 엔터를 입력하세요.
                     </div>
-                    <input id="tags" type="text" name="tags" class="tagify-outside" aria-describedby="tagHelp"/>
+                    <!--                    Lsit<String> tags = List.of("Spring","Hibernate", "JPA") ==> Sping,Hibernate,JPA-->
+                    <!--                    #strings 유틸을 사용해서 Join을 하면됨 -->
+                    <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags,',')}"
+                           class="tagify-outside" aria-describedby="tagHelp"/>
                 </div>
             </div>
         </div>
