--- a/src/main/resources/templates/settings/tags.html
+++ b/src/main/resources/templates/settings/tags.html
@@ -33,6 +33,7 @@
                         참여하고 싶은 취미 주제를 입력해 주세요. 해당 주제의 취미가 생기면 알림을 받을 수 있습니다. 태그를 입력하고 콤마(,)
                         또는 엔터를 입력하세요.
                     </div>
+                    <div id="whitelist" th:text="${whitelist}" hidden></div>
                     <!--                    Lsit<String> tags = List.of("Spring","Hibernate", "JPA") ==> Sping,Hibernate,JPA-->
                     <!--                    #strings 유틸을 사용해서 Join을 하면됨 -->
                     <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags,',')}"
@@ -82,6 +83,7 @@
 
         var tagify = new Tagify(tagInput, {
             pattern: /^.{0,20}$/,
+            whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
             dropdown: {
                 enabled: 1, // suggest tags after a single character input
             } // map tags
