Tag 수정 - tagify

--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-8">
             <div class="row">
-                <h2 class="col-12">주요 활동 지</h2>
+                <h2 class="col-12">주요 활동 지역</h2>
             </div>
             <div class="row">
                 <div class="col-12">
