--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -160,7 +160,6 @@
 <div th:fragment="hobby-banner" th:if="${hobby.useBanner}" class="row" id="study-logo">
     <img th:src="${hobby.image}"/>
 </div>
-
 <div th:fragment="hobby-info">
     <div class="row pt-4 text-left justify-content-center bg-light">
         <div class="col-6">
@@ -184,16 +183,16 @@
                 </span>
             <span sec:authorize="isAuthenticated()" th:if="${hobby.isJoinable(#authentication.principal)}"
                   class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary" th:href="@{'/study/' + ${hobby.path} + '/join'}">
+                    <a class="btn btn-primary" th:href="@{'/hobby/' + ${hobby.path} + '/join'}">
                         hobby 가입
                     </a>
                     <a class="btn btn-outline-primary" th:href="@{'/hobby/' + ${hobby.path} + '/members'}"
                        th:text="${hobby.members.size()}">1</a>
                 </span>
             <span sec:authorize="isAuthenticated()"
-                  th:if="${!hobby.closed && study.isMember(#authentication.principal)}" class="btn-group" role="group">
+                  th:if="${!hobby.closed && hobby.isMember(#authentication.principal)}" class="btn-group" role="group">
                     <a class="btn btn-outline-warning" th:href="@{'/hobby/' + ${hobby.path} + '/leave'}">
-                        취미모임 탈퇴
+                        hobby모임 탈퇴
                     </a>
                     <a class="btn btn-outline-primary" th:href="@{'/hobby/' + ${hobby.path} + '/members'}"
                        th:text="${hobby.members.size()}">1</a>
@@ -246,5 +245,18 @@
             <i class="fa fa-cog"></i> 설정
         </a>
     </nav>
+</div>
+
+<div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
+    <ul class="list-unstyled col-10">
+        <li class="media mt-3" th:each="member: ${members}">
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+            <div class="media-body">
+                <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span> <span th:if="${isManager}" class="badge badge-primary">관리자</span></h5>
+                <span th:text="${member.bio}"></span>
+            </div>
+        </li>
+    </ul>
 </div>
 </html>
