--- a/src/main/resources/templates/hobby/members.html
+++ b/src/main/resources/templates/hobby/members.html
@@ -41,12 +41,23 @@
 <div th:replace="fragements.html :: main-nav"></div>
 <div th:replace="fragements.html :: hobby-banner"></div>
 <div class="container">
-        <div th:replace="fragements.html :: hobby-info"></div>
-        <div th:replace="fragements.html :: hobby-menu(hobbyMenu= 'info')"></div>
-    <div class="row px-3 justify-content-center">
-        <div class="col-10 pt-3" th:utext="${hobby.fullDescription}"></div>
-    </div>
+    <div th:replace="fragements.html :: hobby-info"></div>
+    <div th:replace="fragements.html :: hobby-menu(hobbyMenu= 'members')"></div>
 
+<!--    <div th:replace="fragments.html :: member-list(members=${hobby.managers},isManager=${true})"></div>-->
+<!--    <div th:replace="fragments.html :: member-list(members=${hobby.members},isManager=${false})"></div>-->
+    <div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
+        <ul class="list-unstyled col-10">
+            <li class="media mt-3" th:each="member: ${members}">
+                <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
+                <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+                <div class="media-body">
+                    <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span> <span th:if="${isManager}" class="badge badge-primary">관리자</span></h5>
+                    <span th:text="${member.bio}"></span>
+                </div>
+            </li>
+        </ul>
+    </div>
     <div class="fragments.html :: footer"></div>
 </div>
 
