--- a/src/main/resources/templates/hobby/settings/description.html
+++ b/src/main/resources/templates/hobby/settings/description.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--<head th:replace="fragments.html :: head"></head>-->
-<head th:fragment="head">
-    <meta charset="UTF-8">
-    <title>HobbyTogether</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
-    <link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.css">
-    <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .container {
-            max-width: 100%;
-        }
-        .tagify-outside{
-            border: 0;
-            padding: 0;
-            margin: 0;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
-        body,
-        input,
-        button,
-        select,
-        optgroup,
-        textarea,
-        .tooltip,
-        .popover {
-            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
-    </style>
-</head>
+<head th:replace="fragements.html :: head"></head>
 <body>
+<nav th:replace="fragements.html :: main-nav"></nav>
+<div th:replace="fragements.html :: hobby-banner"></div>
+<div class="container">
+    <div th:replace="fragements.html :: hobby-info"></div>
+    <div th:replace="fragements.html :: hobby-menu(hobbyMenu='settings')"></div>
+    <div class="row mt-3 justify-content-center">
+        <div class="col-2">
+            <div th:replace="fragements.html :: hobby-settings-menu(currentMenu='description')"></div>
+        </div>
+        <div class="col-8">
+            <div th:replace="fragements.html :: message"></div>
+            <form class="needs-validation" th:action="@{'/hobby/' + ${hobby.getPath()} + '/settings/description'}"
+                  th:object="${hobbyDescriptionForm}" method="post" novalidate>
+                <div class="form-group">
+                    <label for="shortDescription">짧은 소개</label>
+                    <textarea id="shortDescription" type="textarea" th:field="*{shortDescription}"
+                              class="form-control"
+                              placeholder="hobby를 짧게 소개해 주세요." aria-describedby="shortDescriptionHelp" required
+                              maxlength="100">
+                        </textarea>
+                    <small id="shortDescriptionHelp" class="form-text text-muted">
+                        100자 이내로 hobby모임을 짧은 소개해 주세요.
+                    </small>
+                    <small class="invalid-feedback">짧은 소개를 입력하세요.</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('shortDescription')}"
+                           th:errors="*{shortDescription}">ShortDescription Error</small>
+                </div>
 
+                <div class="form-group">
+                    <label for="fullDescription">상세 소개</label>
+                    <textarea id="fullDescription" type="textarea" th:field="*{fullDescription}"
+                              class="form-control"
+                              placeholder="hobby모임을 자세히 설명해 주세요." aria-describedby="fullDescriptionHelp"
+                              required></textarea>
+                    <small id="fullDescriptionHelp" class="form-text text-muted">
+                        취미모임의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 취미모임원 등 취미모임에 대해 자세히 적어 주세요.
+                    </small>
+                    <small class="invalid-feedback">상세 소개를 입력하세요.</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('fullDescription')}"
+                           th:errors="*{fullDescription}">FullDescription Error</small>
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit"
+                            aria-describedby="submitHelp">수정하기</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="fragments.html :: footer"></div>
+</div>
+<script th:replace="fragements.html :: form-validation"></script>
+<script th:replace="fragements.html :: editor-script"></script>
 </body>
 </html>
