Study settings - banner(진행중)

--- a/src/main/resources/templates/hobby/form.html
+++ b/src/main/resources/templates/hobby/form.html
@@ -62,6 +62,7 @@
 
     <div class="fragments.html :: footer"></div>
 </div>
+<script th:replace="fragements.html :: tooltip"></script>
 <script th:replace="fragements.html :: form-validation"></script>
 <script th:replace="fragements.html :: editor-script"></script>
 </body>
