--- a/src/main/resources/templates/hobby/settings/description.html
+++ b/src/main/resources/templates/hobby/settings/description.html
@@ -53,6 +53,7 @@
     </div>
     <div class="fragments.html :: footer"></div>
 </div>
+<script th:replace="fragements.html :: tooltip"></script>
 <script th:replace="fragements.html :: form-validation"></script>
 <script th:replace="fragements.html :: editor-script"></script>
 </body>
