Hobby settings - path and title

--- a/src/main/resources/templates/hobby/settings/hobby.html
+++ b/src/main/resources/templates/hobby/settings/hobby.html
@@ -79,7 +79,7 @@
                         hobby 경로를 수정하면 이전에 사용하던 경로로 hobby에 접근할 수 없으니 주의하세요. <br/>
                     </div>
                     <div class="form-group">
-                        <input id="path" type="text" name="newPath" th:value="${newPath}" class="form-control"
+                        <input id="path" type="text" name="newPath" th:value="${hobby.path}" class="form-control"
                                placeholder="예) hobby-path" aria-describedby="pathHelp" required>
                         <small id="pathHelp" class="form-text text-muted">
                             공백없이 문자, 숫자, 대시(-)와 언더바(_)만 3자 이상 20자 이내로 입력하세요. hobby 홈 주소에 사용합니다. 예) /hobby/<b>hobby-path</b>
