Hobby join and leave

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -61,6 +61,6 @@
 
     <div th:replace="fragements.html :: footer"></div>
 </div>
-<script th:replace="fragments.html :: form-validation"></script>
+<script th:replace="fragements.html :: form-validation"></script>
 </body>
 </html>
