--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -10,8 +10,7 @@
 
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
-<!--            <div th:replace="fragements.html :: settings-menu(currnetMenu='profile')"></div>-->
-            <div th:replace="fragements.html :: settings-menu(currentMenu='profile')"></div>
+        <div th:replace="fragements.html :: settings-menu(currnetMenu='profile')"></div>
         </div>
         <div class="col-8">
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
@@ -23,89 +22,89 @@
             <div class="row">
                 <h2 class="col-sm-12" th:text="${account.nickname}">YourNickName</h2>
             </div>
-            <div class="row mt-3">
-                <form class="col-sm-6" action="#"
-                      th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
-                    <div class="form-group">
-                        <label for="bio">한 줄 소개</label>
-                        <input id="bio" type="text" th:field="*{bio}" class="form-control"
-                               placeholder="간략한 소개를 부탁합니다." aria-describedby="bioHelp" required>
-                        <small id="bioHelp" class="form-text text-muted">
-                            길지 않게 35자 이내로 입력하세요.
-                        </small>
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
-                            조금 길어요.
-                        </small>
-                    </div>
+        <div class="row mt-3">
+            <form class="col-sm-6" action="#"
+                  th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
+                <div class="form-group">
+                    <label for="bio">한 줄 소개</label>
+                    <input id="bio" type="text" th:field="*{bio}" class="form-control"
+                           placeholder="간략한 소개를 부탁합니다." aria-describedby="bioHelp" required>
+                    <small id="bioHelp" class="form-text text-muted">
+                        길지 않게 35자 이내로 입력하세요.
+                    </small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
+                        조금 길어요.
+                    </small>
+                </div>
 
-                    <div class="form-group">
-                        <label for="url">링크</label>
-                        <input id="url" type="url" th:field="*{url}" class="form-control"
-                               placeholder="http://hobbyTogether.com" aria-describedby="urlHelp" required>
-                        <small id="urlHelp" class="form-text text-muted">
-                            블로그, 유튜브 또는 포트폴리오나 좋아하는 웹 사이트 등 본인을 표현할 수 있는 링크를 추가하세요.
-                        </small>
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
-                            옳바른 URL이 아닙니다. 예시처럼 입력해 주세요.
-                        </small>
-                    </div>
+                <div class="form-group">
+                    <label for="url">링크</label>
+                    <input id="url" type="url" th:field="*{url}" class="form-control"
+                           placeholder="http://studyolle.com" aria-describedby="urlHelp" required>
+                    <small id="urlHelp" class="form-text text-muted">
+                        블로그, 유튜브 또는 포트폴리오나 좋아하는 웹 사이트 등 본인을 표현할 수 있는 링크를 추가하세요.
+                    </small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
+                        옳바른 URL이 아닙니다. 예시처럼 입력해 주세요.
+                    </small>
+                </div>
 
-                    <div class="form-group">
-                        <label for="company">직업</label>
-                        <input id="company" type="text" th:field="*{occupation}" class="form-control"
-                               placeholder="어떤 일을 하고 계신가요?" aria-describedby="occupationHelp" required>
-                        <small id="occupationHelp" class="form-text text-muted">
-                            개발자? 매니저? 취준생? 대표님?
-                        </small>
-                    </div>
+                <div class="form-group">
+                    <label for="company">직업</label>
+                    <input id="company" type="text" th:field="*{occupation}" class="form-control"
+                           placeholder="어떤 일을 하고 계신가요?" aria-describedby="occupationHelp" required>
+                    <small id="occupationHelp" class="form-text text-muted">
+                        개발자? 매니저? 취준생? 대표님?
+                    </small>
+                </div>
 
-                    <div class="form-group">
-                        <label for="location">활동 지역</label>
-                        <input id="location" type="text" th:field="*{location}" class="form-control"
-                               placeholder="Redmond, SEOUL, KOREA"
-                               aria-describedby="locationdHelp" required>
-                        <small id="locationdHelp" class="form-text text-muted">
-                            주요 활동(사는 곳이나 직장을 다니는 곳 또는 놀러 다니는 곳) 지역의 도시 이름을 알려주세요.
-                        </small>
+                <div class="form-group">
+                    <label for="location">활동 지역</label>
+                    <input id="location" type="text" th:field="*{location}" class="form-control"
+                           placeholder="Redmond, WA, USA"
+                           aria-describedby="locationdHelp" required>
+                    <small id="locationdHelp" class="form-text text-muted">
+                        주요 활동(사는 곳이나 직장을 다니는 곳 또는 놀러 다니는 곳) 지역의 도시 이름을 알려주세요.
+                    </small>
+                </div>
+                <div class="form-group">
+                    <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit"
+                            aria-describedby="submitHelp">수정하기</button>
+                </div>
+            </form>
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-header">
+                        프로필 이미지
                     </div>
-                    <div class="form-group">
-                        <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control"/>
+                    <div id="current-profile-image" class="mt-3">
+                        <svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
+                             th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
+                        <img th:if="${!#strings.isEmpty(profile.profileImage)}" class="rounded"
+                             th:src="${profile.profileImage}"
+                             width="125" height="125" alt="name" th:alt="${account.nickname}"/>
                     </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary btn-block" type="submit"
-                                aria-describedby="submitHelp">수정하기</button>
-                    </div>
-                </form>
-                <div class="col-sm-6">
-                    <div class="card text-center">
-                        <div class="card-header">
-                            프로필 이미지
+                    <div id="new-profile-image" class="mt-3"></div>
+                    <div class="card-body">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="profile-image-file">
+                            <label class="custom-file-label" for="profile-image-file">프로필 이미지 변경</label>
                         </div>
-                        <div id="current-profile-image" class="mt-3">
-                            <svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
-                                 th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
-                            <img th:if="${!#strings.isEmpty(profile.profileImage)}" class="rounded"
-                                 th:src="${profile.profileImage}"
-                                 width="125" height="125" alt="name" th:alt="${account.nickname}"/>
+                        <div id="new-profile-image-control" class="mt-3">
+                            <button class="btn btn-outline-primary btn-block" id="cut-button">자르기</button>
+                            <button class="btn btn-outline-success btn-block" id="confirm-button">확인</button>
+                            <button class="btn btn-outline-warning btn-block" id="reset-button">취소</button>
                         </div>
-                        <div id="new-profile-image" class="mt-3"></div>
-                        <div class="card-body">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="profile-image-file">
-                                <label class="custom-file-label" for="profile-image-file">프로필 이미지 변경</label>
-                            </div>
-                            <div id="new-profile-image-control" class="mt-3">
-                                <button class="btn btn-outline-primary btn-block" id="cut-button">자르기</button>
-                                <button class="btn btn-outline-success btn-block" id="confirm-button">확인</button>
-                                <button class="btn btn-outline-warning btn-block" id="reset-button">취소</button>
-                            </div>
-                            <div id="cropped-new-profile-image" class="mt-3"></div>
-                        </div>
+                        <div id="cropped-new-profile-image" class="mt-3"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <link  href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
@@ -135,7 +134,7 @@
                         let img = document.createElement("img");
                         img.id = 'new-profile';
                         img.src = e.target.result;
-                        img.setAttribute('width', '100%');
+                        img.width = 250;
 
                         $newProfileImage.html(img);
                         $newProfileImage.show();
