Revert "Study settings - banner(진행중)"
This reverts commit e72e0699

--- a/src/main/resources/templates/hobby/view.html
+++ b/src/main/resources/templates/hobby/view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div th:replace="fragements.html :: head"></div>
 
 <body class="bg-light">
@@ -14,6 +14,11 @@
 
     <div class="fragments.html :: footer"></div>
 </div>
-<script th:replace="fragements.html :: tooltip"></script>
+
+<script type="application/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
