--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -22,19 +22,6 @@
             padding: 0;
             margin: 0;
         }
-        #study-logo {
-            height: 200px;
-            width: 100%;
-            overflow: hidden;
-            padding: 0;
-            margin: 0;
-        }
-
-        #study-logo img {
-            height: auto;
-            width: 100%;
-            overflow: hidden;
-        }
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
@@ -277,7 +264,7 @@
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/description'}">소개</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/banner'}">배너 이미지</a>
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/image'}">배너 이미지</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/tags'}">hobby 주제</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
@@ -308,10 +295,5 @@
 </div>
 
 
-<script th:fragment="tooltip" type="application/javascript">
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
 
 </html>
