--- a/src/main/resources/templates/hobby/members.html
+++ b/src/main/resources/templates/hobby/members.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragements.html :: head"></head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<!--<head th:replace="fragments.html :: head"></head>-->
+<head th:fragment="head">
+    <meta charset="UTF-8">
+    <title>HobbyTogether</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
+    <link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.css">
+    <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .container {
+            max-width: 100%;
+        }
+        .tagify-outside{
+            border: 0;
+            padding: 0;
+            margin: 0;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+        body,
+        input,
+        button,
+        select,
+        optgroup,
+        textarea,
+        .tooltip,
+        .popover {
+            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+    </style>
+</head>
+
 <body class="bg-light">
 <div th:replace="fragements.html :: main-nav"></div>
 <div th:replace="fragements.html :: hobby-banner"></div>
 <div class="container">
     <div th:replace="fragements.html :: hobby-info"></div>
-    <div th:replace="fragements.html :: hobby-menu(hobbyMenu='members')"></div>
+    <div th:replace="fragements.html :: hobby-menu(hobbyMenu= 'members')"></div>
 
-    <div th:replace="fragements.html :: member-list(members=${hobby.managers},isManager=${true})"></div>
-    <div th:replace="fragements.html :: member-list(members=${hobby.members},isManager=${false})"></div>
-
-    <div th:replace="fragements.html :: footer"></div>
+<!--    <div th:replace="fragments.html :: member-list(members=${hobby.managers},isManager=${true})"></div>-->
+<!--    <div th:replace="fragments.html :: member-list(members=${hobby.members},isManager=${false})"></div>-->
+    <div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
+        <ul class="list-unstyled col-10">
+            <li class="media mt-3" th:each="member: ${members}">
+                <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
+                <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+                <div class="media-body">
+                    <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span> <span th:if="${isManager}" class="badge badge-primary">관리자</span></h5>
+                    <span th:text="${member.bio}"></span>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="fragments.html :: footer"></div>
 </div>
-<script th:replace="fragements.html :: tooltip"></script>
+
+<script type="application/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
-
