Revert "Add Hobby /view 수정 완료"
This reverts commit 8c4dbdde

--- a/src/main/resources/templates/hobby/form.html
+++ b/src/main/resources/templates/hobby/form.html
@@ -1,108 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!--<head th:replace="fragments.html :: head"></head>-->
-<head th:fragment="head">
-    <meta charset="UTF-8">
-    <title>HobbyTogether</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
-    <link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.css">
-    <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .container {
-            max-width: 100%;
-        }
-        .tagify-outside{
-            border: 0;
-            padding: 0;
-            margin: 0;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
-        body,
-        input,
-        button,
-        select,
-        optgroup,
-        textarea,
-        .tooltip,
-        .popover {
-            font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
-    </style>
-</head>
-
 <body class="bg-light">
 <!--<div th:replace="fragments.html :: main-nav"></div>-->
-<nav th:fragment="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="/" th:href="@{/}">
-        <img src="/images/logo_sm.png" width="30" height="30">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- 검색 창 -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <form th:action="@{/search/hobby}" class="form-inline" method="get">
-                    <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="나의 취미 찾기"
-                           aria-label="Search"/>
-                </form>
-            </li>
-        </ul>
-        <!-- 로그인 -->
-        <ul class="navbar-nav justify-content-end">
-            <li class="nav-item" sec:authorize="!isAuthenticated()">
-                <a class="nav-link" href="#" th:href="@{/login}">로그인</a>
-            </li>
-            <li class="nav-item" sec:authorize="!isAuthenticated()">
-                <a class="nav-link" href="#" th:href="@{/sign-up}">가입</a>
-            </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="#" th:href="@{/notification}">
-                    <!--font-awesome 벨 추가-->
-                    <i class="fa fa-bell-o" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li class="nv-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link btn btn-outline-primary" href="#" th:href="@{/new-hobby}">
-                    <!--font-awesome 더하기 추가-->
-                    <i class="fa fa-plus" aria-hidden="true"> </i> 취미공유 모임 개설 </a>
-            </li>
-            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    <!-- jdenticon 이름에 따라 다른 아바타가 나옴 -->
-                    <svg th:if="${#strings.isEmpty(account?.profileImage)}"
-                         th:data-jdenticon-value="${#authentication.name}"
-                         width="24" height="24" class="rounded border bg-light"></svg>
-                    <img th:if="${!#strings.isEmpty(account?.profileImage)}" th:src="${account.profileImage}"
-                         width="24" height="24" class="rounded border"/>
-                </a>
-                <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
-                    <h6 class="dropdown-header">
-                        <span sec:authentication="name">Username</span>
-                    </h6>
-                    <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">프로필</a>
-                    <a class="dropdown-item">취미</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
-                    <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
-                        <button class="dropdown-item" type="submit">로그아웃</button>
-                    </form>
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav>
-
+<!--<div th:replace="fragnments.html :: main-nav"></div>-->
 <div class="container">
     <div class="py-5 text-center">
         <h2>취미모임 개설</h2>
@@ -112,7 +13,7 @@
             <div class="form-group">
                 <label for="path">취미 URL</label>
                 <input id="path" type="text" th:field="*{path}" class="form-control"
-                       placeholder="예) hobby-path" aria-describedby="pathHelp" required min="2" max="20">
+                       placeholder="예) study-path" aria-describedby="pathHelp" required min="2" max="20">
                 <small id="pathHelp" class="form-text text-muted">
                     공백없이 문자, 숫자, 대시(-)와 언더바(_)만 2자 이상 20자 이내로 입력하세요. 스터디 홈 주소에 사용합니다. 예) /hobby/<b>hobby-path</b>
                 </small>
@@ -163,33 +64,12 @@
     <div class="fragments.html :: footer"></div>
 </div>
 <!--<script th:replace="fragments.html :: form-validation"></script>-->
-<script type="application/javascript" th:fragment="form-validation">
-    (function () {
-        'use strict';
-
-        window.addEventListener('load', function () {
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.getElementsByClassName('needs-validation');
-
-            // Loop over them and prevent submission
-            Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated')
-                }, false)
-            })
-        }, false)
-    }())
-</script>
 <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
 <script type="application/javascript">
     $(function () {
         $('#fullDescription').summernote({
             fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Merriweather'],
-            placeholder: '취미모임 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 취미모임원 등 취미모임 대해 자세히 적어 주세요.',
+            placeholder: '스터디의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 스터디원 등 스터디에 대해 자세히 적어 주세요.',
             tabsize: 2,
             height: 300
         });
