Hobby settings - banner

--- a/src/main/resources/templates/hobby/form.html
+++ b/src/main/resources/templates/hobby/form.html
@@ -63,6 +63,7 @@
 
     <div class="fragements.html :: footer"></div>
 </div>
+<script th:replace="fragements.html :: tooltip"></script>
 <script th:replace="fragements.html :: form-validation"></script>
 <script th:replace="fragements.html :: editor-script"></script>
 </body>
