--- a/src/main/resources/templates/hobby/members.html
+++ b/src/main/resources/templates/hobby/members.html
@@ -13,6 +13,7 @@
 
     <div th:replace="fragements.html :: footer"></div>
 </div>
+<!--<script th:replace="fragements.html :: tooltip"></script>-->
 <script type="application/javascript">
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
