--- a/src/main/resources/templates/hobby/settings/description.html
+++ b/src/main/resources/templates/hobby/settings/description.html
@@ -47,6 +47,12 @@
     </div>
     <div th:replace="fragements.html :: footer"></div>
 </div>
+<!--<script th:replace="fragements.html :: tooltip"></script>-->
+<script type="application/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 <script th:replace="fragements.html :: form-validation"></script>
 <script th:replace="fragements.html :: editor-script"></script>
 </body>
