--- a/src/main/resources/templates/hobby/view.html
+++ b/src/main/resources/templates/hobby/view.html
@@ -19,5 +19,6 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
+<!--<script th:replace="fragements.html :: tooltip"></script>-->
 </body>
 </html>
