--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html">
@@ -16,11 +16,27 @@
         .container {
             max-width: 100%;
         }
-        .tagify-outside{
+
+        .tagify-outside {
             border: 0;
             padding: 0;
             margin: 0;
         }
+
+        #hobby-logo {
+            height: 200px;
+            width: 100%;
+            overflow: hidden;
+            padding: 0;
+            margin: 0;
+        }
+
+        #hobby-logo img {
+            height: auto;
+            width: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Noto Sans KR", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
@@ -148,7 +164,7 @@
 </script>
 
 <script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">
-    $(function() {
+    $(function () {
         var csrfToken = /*[[${_csrf.token}]]*/ null;
         var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
         $(document).ajaxSend(function (e, xhr, options) {
@@ -172,15 +188,19 @@
                 <span th:if="${!hobby.published}"
                       class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom"
                       title="hobby 공개 준비중">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>DRAFT</button>
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button"
+                            disabled>DRAFT</button>
                 </span>
             <span th:if="${hobby.closed}"
                   class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="hobby 종료함">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>CLOSED</button>
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button"
+                            disabled>CLOSED</button>
                 </span>
             <span th:if="${!hobby.recruiting}"
-                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="팀원 모집중 아님">
-                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" disabled>OFF</button>
+                  class="d-inline-block ml-1" tabindex="0" data-toggle="tooltip" data-placement="bottom"
+                  title="팀원 모집중 아님">
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button"
+                            disabled>OFF</button>
                 </span>
             <span sec:authorize="isAuthenticated()" th:if="${hobby.isJoinable(#authentication.principal)}"
                   class="btn-group" role="group" aria-label="Basic example">
@@ -232,17 +252,21 @@
 
 <div th:fragment="hobby-menu (hobbyMenu)" class="row px-3 justify-content-center bg-light">
     <nav class="col-10 nav nav-tabs">
-        <a class="nav-item nav-link" href="#" th:classappend="${hobbyMenu == 'info'}? active" th:href="@{'/hobby/' + ${hobby.path}}">
+        <a class="nav-item nav-link" href="#" th:classappend="${hobbyMenu == 'info'}? active"
+           th:href="@{'/hobby/' + ${hobby.path}}">
             <i class="fa fa-info-circle"></i> 소개
         </a>
-        <a class="nav-item nav-link" href="#" th:classappend="${hobbyMenu == 'members'}? active" th:href="@{'/hobby/' + ${hobby.path} + '/members'}">
+        <a class="nav-item nav-link" href="#" th:classappend="${hobbyMenu == 'members'}? active"
+           th:href="@{'/hobby/' + ${hobby.path} + '/members'}">
             <i class="fa fa-user"></i> 구성원
         </a>
-        <a class="nav-item nav-link" th:classappend="${hobbyMenu == 'events'}? active" href="#" th:href="@{'/hobby/' + ${hobby.path} + '/events'}">
+        <a class="nav-item nav-link" th:classappend="${hobbyMenu == 'events'}? active" href="#"
+           th:href="@{'/hobby/' + ${hobby.path} + '/events'}">
             <i class="fa fa-calendar"></i> 모임
         </a>
         <a sec:authorize="isAuthenticated()" th:if="${hobby.isManager(#authentication.principal)}"
-           class="nav-item nav-link" th:classappend="${hobbyMenu == 'settings'}? active" href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/description'}">
+           class="nav-item nav-link" th:classappend="${hobbyMenu == 'settings'}? active" href="#"
+           th:href="@{'/hobby/' + ${hobby.path} + '/settings/description'}">
             <i class="fa fa-cog"></i> 설정
         </a>
     </nav>
@@ -251,10 +275,14 @@
 <div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
     <ul class="list-unstyled col-10">
         <li class="media mt-3" th:each="member: ${members}">
-            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
-            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.nickname}"
+                 width="64" height="64" class="rounded border bg-light mr-3"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64"
+                 height="64" class="rounded border mr-3"/>
             <div class="media-body">
-                <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span> <span th:if="${isManager}" class="badge badge-primary">관리자</span></h5>
+                <h5 class="mt-0 mb-1"><span th:text="${member.nickname}"></span> <span th:if="${isManager}"
+                                                                                       class="badge badge-primary">관리자</span>
+                </h5>
                 <span th:text="${member.bio}"></span>
             </div>
         </li>
@@ -266,12 +294,13 @@
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/description'}">소개</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
-       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/image'}">배너 이미지</a>
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/banner'}">배너 이미지</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/tags'}">Hobby 주제</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/zones'}">활동 지역</a>
-    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'hobby'}? active"
+    <a class="list-group-item list-group-item-action list-group-item-danger"
+       th:classappend="${currentMenu == 'hobby'}? active"
        href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/hobby'}">Hobby</a>
 </div>
 
@@ -295,4 +324,10 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
+
+<script th:fragment="tooltip" type="application/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </html>
