--- a/src/main/resources/templates/event/update-form.html
+++ b/src/main/resources/templates/event/update-form.html
@@ -5,8 +5,8 @@
 <nav th:replace="fragements.html :: main-nav"></nav>
 <div th:replace="fragements.html :: hobby-banner"></div>
 <div class="container">
-    <div th:replace="fragments.html :: event-form (mode='new', action='/hobby/' + ${hobby.path} + '/new-event/')"></div>
-
+    <div th:replace="fragements.html :: event-form (mode='edit', action='/hobby/' + ${hobby.path}
+        + '/events/' + ${event.id} + '/edit')"></div>
     <div th:replace="fragements.html :: footer"></div>
 </div>
 <script th:replace="fragements.html :: form-validation"></script>
